--- a/src/learning/lessons2.html
+++ b/src/learning/lessons2.html
@@ -7,88 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../sass/main.scss" />
+  <link rel="stylesheet" href="../sass/main.scss" /> <!-- Подключение внешнего CSS -->
   <title>Органічна хімія</title>
-  <style>
-    /* Styles for lessons */
-    #lessonsContainer {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      padding: 20px;
-    }
-
-    #lessonsContainer button {
-      background-color: #001c27;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      padding: 12px 25px;
-      font-size: 18px;
-      cursor: pointer;
-      transition: background-color 0.2s, box-shadow 0.2s;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    #lessonsContainer button:hover {
-      background-color: #003045;
-    }
-
-    /* Styles for the lesson modal */
-    #lessonModal {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      display: none;
-    }
-
-    #lessonContent {
-      background: white;
-      padding: 30px;
-      border-radius: 8px;
-      max-width: 700px;
-      width: 100%;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-      max-height: 80vh;
-      overflow-y: auto;
-    }
-
-    #completeLessonButton {
-      margin-top: 20px;
-      padding: 12px 25px;
-      background-color: #001c27;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background-color 0.2s, box-shadow 0.2s;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    #completeLessonButton:hover {
-      background-color: #003045;
-    }
-
-    /* Styles for profile circle */
-    .profile-circle {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      background-color: #007bff;
-      color: white;
-      font-size: 18px;
-      text-decoration: none;
-    }
-  </style>
 </head>
 
 <body class="tab__body">
@@ -126,111 +46,9 @@
     <div id="lessonContent">
       <!-- Lesson content will be added here -->
     </div>
-    <button id="completeLessonButton">Завершити урок</button>
   </div>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const lessons = [
-        {
-          id: 1,
-          name: "Основи органічної хімії",
-          content: `Органічна хімія є галуззю хімії, яка вивчає сполуки на основі карбону. У цьому уроці розглянемо основи органічної хімії, зокрема, структуру і властивості органічних молекул. Основна характеристика органічних сполук - наявність атомів вуглецю, які утворюють різні структурні одиниці, включаючи вуглеводні, спирти, альдегіди, кетони та інші функціональні групи. Ми розглянемо різні типи органічних зв'язків, такі як одинарний, подвійний та потрійний, а також типи органічних молекул: насичені та ненасичені. Вивчимо основи номенклатури органічних сполук, включаючи методи називання алканів, алкенів та алкінів. Цей урок дозволить зрозуміти основи органічної хімії і створити базу для подальшого вивчення більш складних тем.`
-        },
-        {
-          id: 2,
-          name: "Ароматичні сполуки",
-          content: `Ароматичні сполуки є важливим класом органічних речовин, які містять ароматичне кільце, зокрема бензольне кільце. У цьому уроці ми розглянемо властивості і реакції ароматичних сполук, таких як бензол, толуол і ксилол. Основна особливість ароматичних сполук - це стабільність їхньої структури завдяки кон'югованій системі π-електронів, яка забезпечує ароматичність. Вивчимо основні реакції ароматичних сполук, такі як нітрування, сульфонування і галогенування. Обговоримо використання ароматичних сполук в промисловості, медицині та в побуті. Розглянемо також механізми реакцій і вплив ароматичних сполук на навколишнє середовище.`
-        },
-        {
-          id: 3,
-          name: "Спирти та феноли",
-          content: `Спирти і феноли є важливими класами органічних сполук, що містять гідроксильні групи. У цьому уроці ми розглянемо властивості спиртів, їх класифікацію, номенклатуру і реакції. Спирти поділяються на первинні, вторинні та третинні залежно від того, скільки груп R зв'язано з атомом гідроксила. Вивчимо реакції спиртів, включаючи дегідратацію, окиснення та заміщення. Феноли, що містять одну або більше гідроксильних груп, приєднаних до ароматичного кільця, також будуть розглянуті. Обговоримо властивості фенолів, їх реакції та застосування, включаючи синтез лікарських засобів і барвників.`
-        },
-        {
-          id: 4,
-          name: "Карбонові кислоти та їх похідні",
-          content: `Карбонові кислоти є класом органічних сполук, які містять карбоксильну групу. У цьому уроці ми розглянемо властивості карбонових кислот, їх номенклатуру та реакції. Основні карбонові кислоти, такі як оцтова, мурашина і пропіонова кислоти, будуть розглянуті разом з їхніми похідними, включаючи ефіри, аміди і ангіди. Вивчимо реакції карбонових кислот, такі як естерифікація, гідроліз і утворення солей. Обговоримо також використання карбонових кислот в промисловості, наприклад, у виготовленні пластмас і синтетичних волокон.`
-        },
-        {
-          id: 5,
-          name: "Синтез органічних сполук",
-          content: `Синтез органічних сполук є важливою частиною органічної хімії, що займається створенням нових молекул шляхом хімічних реакцій. У цьому уроці ми розглянемо основи синтетичних методів, таких як реакції заміщення, приєднання і розщеплення. Вивчимо методи синтезу важливих органічних сполук, таких як лікарські препарати, пластмаси і барвники. Обговоримо різні техніки синтезу, включаючи використання каталістів і реакцій під високим тиском. Зосередимося на плануванні синтетичних шляхів і оптимізації умов реакцій для досягнення максимальних виходів продуктів.`
-        },
-        {
-          id: 6,
-          name: "Застосування органічної хімії",
-          content: `Органічна хімія має численні застосування в різних галузях, включаючи промисловість, медицину та повсякденне життя. У цьому уроці ми розглянемо, як органічні сполуки використовуються в різних сферах. Вивчимо застосування органічних молекул в медицині, таких як антибіотики, гормони і протипухлинні препарати. Обговоримо використання органічних сполук в промисловості, зокрема в синтезі полімерів, фармацевтичних продуктів і агрохімікатів. Розглянемо також роль органічних сполук у побуті, наприклад, у косметиці і миючих засобах. Урок надасть розуміння важливості органічної хімії в сучасному світі та її впливу на різні аспекти нашого життя.`
-        }
-      ];
-
-      const lessonsContainer = document.getElementById("lessonsContainer");
-      const lessonModal = document.getElementById("lessonModal");
-      const lessonContent = document.getElementById("lessonContent");
-      const completeLessonButton = document.getElementById("completeLessonButton");
-
-      // Add lesson buttons
-      lessons.forEach(lesson => {
-        const button = document.createElement("button");
-        button.textContent = lesson.name;
-        button.addEventListener("click", () => {
-          lessonContent.innerHTML = `
-            <h2>${lesson.name}</h2>
-            <p>${lesson.content}</p>
-          `;
-          completeLessonButton.setAttribute("data-lesson-id", lesson.id);
-          lessonModal.style.display = "flex";
-        });
-        lessonsContainer.appendChild(button);
-      });
-
-      // Handle lesson completion
-      completeLessonButton.addEventListener("click", () => {
-        const lessonId = completeLessonButton.getAttribute("data-lesson-id");
-        const userProfile = JSON.parse(localStorage.getItem("userProfile"));
-        if (userProfile) {
-          fetch(`https://669a78899ba098ed61ffc5a3.mockapi.io/accounts/${userProfile.id}`, {
-            method: "PUT",
-            headers: {
-              "Content-Type": "application/json"
-            },
-            body: JSON.stringify({
-              ...userProfile,
-              courses: userProfile.courses.map(course =>
-                course.id === parseInt(lessonId) ? { ...course, completed: true } : course
-              )
-            })
-          })
-          .then(response => response.json())
-          .then(() => {
-            lessonModal.style.display = "none";
-          });
-        }
-      });
-
-      // Close modal when clicking outside
-      window.addEventListener("click", (event) => {
-        if (event.target === lessonModal) {
-          lessonModal.style.display = "none";
-        }
-      });
-
-      // Profile circle setup
-      const profileButton = document.querySelector("#profileCircle");
-
-      const updateProfileButton = () => {
-        const userProfile = localStorage.getItem("userProfile");
-        if (userProfile) {
-          const user = JSON.parse(userProfile);
-          profileButton.textContent = user.name[0].toUpperCase();
-        } else {
-          profileButton.style.display = "none";
-        }
-      };
-
-      updateProfileButton();
-    });
-  </script>
+  <script src="../js/learning2.js"></script> <!-- Подключение внешнего JavaScript -->
 </body>
 
 </html>
