--- a/pages/sponsors.html
+++ b/pages/sponsors.html
@@ -1,1 +1,44 @@
-<!DOCTYPE html><html lang="en"><head><script type="module" src="/mge/pages/rewiews.5503519c.js"></script><script type="module" src="/mge/pages/settings.abe3408b.js"></script><script type="module" src="/mge/pages/courses.6514ceb0.js"></script><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="/mge/index.0ce8b528.css"><title>Document</title></head><body> <h1 class="sponsor__title">Наші спонсори!</h1> <div id="window"> <div id="slide-container"> <div class="slides"> <img class="slides__image" src="/mge/your-alpaca%202.3509c143.png" alt="FasimanYT"> <h3 class="slides__text">FasimanYT</h3> </div> <div class="slides"> <img class="slides__image" src="/mge/1200px-Kharkiv_IT_Cluster_logo_6%201.5ae4679d.png" alt="Kharkiv IT Cluster"> <h3 class="slides__text">Kharkiv IT Cluster</h3> </div> <div class="slides"> <img class="slides__image" src="/mge/download%201.a20fee10.png" alt="Robota UA"> <h3 class="slides__text">Robota UA</h3> </div> <div class="slides"> <img class="slides__image" src="/mge/Lviv_IT_Cluster_Logo%201.c08460cb.png" alt="Lviv IT Cluster"> <h3 class="slides__text">Lviv IT Cluster</h3> </div> <div class="slides"> <img class="slides__image" src="/mge/GoIT%201%20(1).07c59a96.png" alt="GO IT"> <h3 class="slides__text">GO IT</h3> </div> <div id="text-bar"> <p id="place"></p> </div> </div> <div id="dotsContainer"></div> <a id="previous" class="arrow">&#10094</a> <a id="next" class="arrow">&#10095</a> </div> <script type="module" src="/mge/index.313a7fa5.js"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head><script src="/pages/rewiews.05ab3fe1.js"></script><script src="/pages/settings.1309efa1.js"></script><script src="/pages/courses.eda16b4d.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/index.f7626f62.css">
+    <title>Document</title>
+</head>
+<body>
+    <h1 class="sponsor__title">Наші спонсори!</h1>
+    <div id="window">
+        <div id="slide-container">
+            <div class="slides">
+                <img class="slides__image" src="/your-alpaca%202.b0801d3f.png" alt="FasimanYT">
+                <h3 class="slides__text">FasimanYT</h3>
+            </div>
+            <div class="slides">
+                <img class="slides__image" src="/1200px-Kharkiv_IT_Cluster_logo_6%201.bbe53c34.png" alt="Kharkiv IT Cluster">
+                <h3 class="slides__text">Kharkiv IT Cluster</h3>
+            </div>
+            <div class="slides">
+                <img class="slides__image" src="/download%201.bed0e290.png" alt="Robota UA">
+                <h3 class="slides__text">Robota UA</h3>
+            </div>
+            <div class="slides">
+                <img class="slides__image" src="/Lviv_IT_Cluster_Logo%201.41004d73.png" alt="Lviv IT Cluster">
+                <h3 class="slides__text">Lviv IT Cluster</h3>
+            </div>
+            <div class="slides">
+                <img class="slides__image" src="/GoIT%201%20(1).e2bba720.png" alt="GO IT">
+                <h3 class="slides__text">GO IT</h3>
+            </div>
+           
+            <div id="text-bar">
+                <p id="place"></p>
+            </div>
+        </div>
+        <div id="dotsContainer"></div>
+        <a id="previous" class="arrow">&#10094</a>
+        <a id="next" class="arrow">&#10095</a>
+    </div>
+    <script src="/index.975ef6c8.js" defer=""></script>
+</body>
+</html>
