--- a/pages/courses.html
+++ b/pages/courses.html
@@ -1,52 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/index.f7626f62.css">
-    <title>Document</title>
-</head>
-
-<body class="tab__body">
-    <div class="tab">
-        <a href="/index.html"><span class="tab__logo__text">ED</span></a>
-        <a href="/pages/dashboard.html"> <img class="tab__mainicon" src="/dashboard.84449c88.svg" alt=""></a>
-        <ul class="tab__list">
-            <li class="tab__list__item">
-                <a href="/pages/courses.html">
-                    <img class="tab__list__item__svg" src="/school.21124949.svg" alt="School">
-                </a>
-            </li>
-            <li class="tab__list__item">
-                <a href="/pages/lessons.html">
-                    <img class="tab__list__item__svg" src="/emoji_objects.076f501b.svg" alt="Emoji Objects">
-                </a>
-            </li>
-            <li class="tab__list__item">
-                <a href="/pages/rewiews.html">
-                    <img class="tab__list__item__svg" src="/chat.8d9b58d9.svg" alt="Chat">
-                </a>
-            </li>
-        </ul>
-        <a href="/pages/settings.html" id="profileCircle" class="profile-circle"></a>
-    </div>
-    <button id="showCourses" class="course-button">Показати курси</button>
-    <div class="added-courses" id="addedCourses">
-        <h3>Додані курси:</h3>
-    </div>
-    <div id="courseModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Виберіть курс</h2>
-            <ul id="courseList">
-                <li class="course-list-item"><a href="/learning/lessons1.html" class="course-link" data-id="1" data-name="Хімія 101">Хімія 101</a></li>
-                <li class="course-list-item"><a href="/learning/lessons2.html" class="course-link" data-id="2" data-name="Органічна хімія">Органічна хімія</a></li>
-                <li class="course-list-item"><a href="/learning/lessons3.html" class="course-link" data-id="3" data-name="Аналітична хімія">Аналітична хімія</a></li>
-            </ul>
-        </div>
-    </div>
-    <script src="/pages/courses.eda16b4d.js" defer=""></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="/mge/index.0ce8b528.css"><title>Document</title></head><body class="tab__body"> <div class="tab"> <a href="/mge/index.html"><span class="tab__logo__text">ED</span></a> <a href="/mge/pages/dashboard.html"> <img class="tab__mainicon" src="/mge/dashboard.c1601abe.svg" alt></a> <ul class="tab__list"> <li class="tab__list__item"> <a href="/mge/pages/courses.html"> <img class="tab__list__item__svg" src="/mge/school.185c1a10.svg" alt="School"> </a> </li> <li class="tab__list__item"> <a href="/mge/pages/lessons.html"> <img class="tab__list__item__svg" src="/mge/emoji_objects.b46bab92.svg" alt="Emoji Objects"> </a> </li> <li class="tab__list__item"> <a href="/mge/pages/rewiews.html"> <img class="tab__list__item__svg" src="/mge/chat.6da958e5.svg" alt="Chat"> </a> </li> </ul> <a href="/mge/pages/settings.html" id="profileCircle" class="profile-circle"></a> </div> <button id="showCourses" class="course-button">Показати курси</button> <div class="added-courses" id="addedCourses"> <h3>Додані курси:</h3> </div> <div id="courseModal" class="modal"> <div class="modal-content"> <span class="close">&times;</span> <h2>Виберіть курс</h2> <ul id="courseList"> <li class="course-list-item"><a href="/mge/learning/lessons1.html" class="course-link" data-id="1" data-name="Хімія 101">Хімія 101</a></li> <li class="course-list-item"><a href="/mge/learning/lessons2.html" class="course-link" data-id="2" data-name="Органічна хімія">Органічна хімія</a></li> <li class="course-list-item"><a href="/mge/learning/lessons3.html" class="course-link" data-id="3" data-name="Аналітична хімія">Аналітична хімія</a></li> </ul> </div> </div> <script type="module" src="/mge/pages/courses.6514ceb0.js"></script> </body></html>
