--- a/pages/lessons1.html
+++ b/pages/lessons1.html
@@ -50,7 +50,7 @@
     </div>
   </div>
 
-  <script src="/learning/lessons1.44a48489.js"></script>
-<script src="/lessons1.764e5e60.js"></script></body>
+  <script src="/pages/lessons1.44a48489.js"></script>
+<script src="/lessons1.8739bf4e.js"></script></body>
 
 </html>
