--- a/pages/lessons2.html
+++ b/pages/lessons2.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/index.f7626f62.css">
-  <title>Уроки Хімії 101</title>
+  <title>Органічна хімія</title>
 </head>
 
 <body class="tab__body">
@@ -38,19 +38,14 @@
   </div>
 
   <div id="lessonsContainer">
-    <!-- Buttons for lessons will be added here by JavaScript -->
-     
   </div>
 
-  <!-- Lesson Modal -->
   <div id="lessonModal">
     <div id="lessonContent">
-      <!-- Lesson content will be added here -->
-      
     </div>
   </div>
 
-  <script src="/learning/lessons1.44a48489.js"></script>
-<script src="/lessons1.764e5e60.js"></script></body>
+  <script src="/pages/lessons2.eaebb463.js"></script> 
+<script src="/lessons2.56c72aff.js"></script></body>
 
 </html>
