--- a/src/pages/courses.html
+++ b/src/pages/courses.html
@@ -40,9 +40,9 @@
             <span class="close">&times;</span>
             <h2>Виберіть курс</h2>
             <ul id="courseList">
-                <li class="course-list-item"><a href="../learning/lessons1.html" class="course-link" data-id="1" data-name="Хімія 101">Хімія 101</a></li>
-                <li class="course-list-item"><a href="../learning/lessons2.html" class="course-link" data-id="2" data-name="Органічна хімія">Органічна хімія</a></li>
-                <li class="course-list-item"><a href="../learning/lessons3.html" class="course-link" data-id="3" data-name="Аналітична хімія">Аналітична хімія</a></li>
+                <li class="course-list-item"><a href="../pages/lessons1.html" class="course-link" data-id="1" data-name="Хімія 101">Хімія 101</a></li>
+                <li class="course-list-item"><a href="../pages/lessons2.html" class="course-link" data-id="2" data-name="Органічна хімія">Органічна хімія</a></li>
+                <li class="course-list-item"><a href="../pages/lessons3.html" class="course-link" data-id="3" data-name="Аналітична хімія">Аналітична хімія</a></li>
             </ul>
         </div>
     </div>
