--- a/src/pages/sponsors.html
+++ b/src/pages/sponsors.html
@@ -39,6 +39,6 @@
         <a id="previous" class="arrow">&#10094</a>
         <a id="next" class="arrow">&#10095</a>
     </div>
-    <script type="module" src="../index.js"></script>
+    <script type="module" src="../js/sponsors.js"></script>
 </body>
 </html>
