--- a/src/pages/lessons2.html
+++ b/src/pages/lessons2.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="../sass/main.scss" /> <!-- Подключение внешнего CSS -->
+  <link rel="stylesheet" href="../sass/main.scss" />
   <title>Органічна хімія</title>
 </head>
 
@@ -38,17 +38,14 @@
   </div>
 
   <div id="lessonsContainer">
-    <!-- Buttons for lessons will be added here by JavaScript -->
   </div>
 
-  <!-- Lesson Modal -->
   <div id="lessonModal">
     <div id="lessonContent">
-      <!-- Lesson content will be added here -->
     </div>
   </div>
 
-  <script src="../js/learning2.js"></script> <!-- Подключение внешнего JavaScript -->
+  <script src="../js/learning2.js"></script> 
 </body>
 
 </html>
