--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -1,51 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="../sass/main.scss" />
-    <title>Document</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../sass/main.scss">
+  <title>Document</title>
+  <style>
+    .tab__list__item a {
+      display: inline-block;
+      padding: 10px;
+      border-radius: 50%;
+      transition: background-color 0.3s ease, border 0.3s ease;
+      border: 2px solid transparent;
+    }
 
-  <body class="tab__body">
-    <div class="tab">
-      <a href="../index.html"><span class="tab__logo__text">ED</span></a>
-      <a href="../pages/dashboard.html"> <img class="tab__mainicon" src="../svg/dashboard.svg" alt="" /></a>
-      <ul class="tab__list">
-        <li class="tab__list__item">
-          <a href="./courses.html">
-            <img class="tab__list__item__svg" src="../svg/school.svg" alt="School" />
-          </a>
-        </li>
-        <li class="tab__list__item">
-          <a href="../pages/lessons.html">
-            <img class="tab__list__item__svg" src="../svg/emoji_objects.svg" alt="Emoji Objects" />
-          </a>
-        </li>
-        <li class="tab__list__item">
-          <a href="../pages/rewiews.html">
-            <img class="tab__list__item__svg" src="../svg/chat.svg" alt="Chat" />
-          </a>
-        </li>
-      </ul>
-      <a href="../pages/settings.html" id="profileCircle" class="profile-circle"></a>
-    </div>
-    <h1 class="dashboard__title">Дошка</h1>
-    <div class="dashboard__box">
-      <img src="../images/0124a01a37e43ec5e6393daea45fe935 1.png" alt="" />
-      <p class="dashboard__box__description">
-        EdTech — це сукупність усіх компаній, розробників та інституцій, що
-        створюють продукти і технології для покращення освітніх процесів. Зараз
-        у школах та інститутах навчається понад 20 % населення Землі.
-      </p>
-    </div>
+    .tab__list__item a.active {
+      background-color: #007bff;
+      border: 2px solid #0056b3;
+    }
+  </style>
+</head>
+<body class="tab__body">
+  <div class="tab">
+    <a href="../index.html"><span class="tab__logo__text">ED</span></a>
+    <a href="../pages/dashboard.html" class="tab__mainicon" style="border: 2px solid #007bff; border-radius: 50%; padding: 4px;">
+      <img src="../svg/dashboard.svg" alt="" />
+    </a>
+    <ul class="tab__list">
+      <li class="tab__list__item">
+        <a href="./courses.html">
+          <img class="tab__list__item__svg" src="../svg/school.svg" alt="School" />
+        </a>
+      </li>
+      <li class="tab__list__item">
+        <a href="./lessons.html">
+          <img class="tab__list__item__svg" src="../svg/emoji_objects.svg" alt="Emoji Objects" />
+        </a>
+      </li>
+      <li class="tab__list__item">
+        <a href="./rewiews.html">
+          <img class="tab__list__item__svg" src="../svg/chat.svg" alt="Chat" />
+        </a>
+      </li>
+    </ul>
+    <a href="../pages/settings.html" id="profileCircle" class="profile-circle"></a>
+  </div>
+  <h1 class="dashboard__title">Дошка</h1>
+  <div class="dashboard__box">
+    <img src="../images/0124a01a37e43ec5e6393daea45fe935 1.png" alt="" />
+    <p class="dashboard__box__description">
+      EdTech — це сукупність усіх компаній, розробників та інституцій, що
+      створюють продукти і технології для покращення освітніх процесів. Зараз
+      у школах та інститутах навчається понад 20 % населення Землі.
+    </p>
+  </div>
+  <script src="../js/dashboard.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const currentPath = window.location.pathname.split('/').pop();
+      const tabLinks = document.querySelectorAll('.tab__list__item a');
 
-    <script type="module" src="../js/dashboard.js"></script>
-  </body>
+      tabLinks.forEach(link => {
+        const href = link.getAttribute('href').split('/').pop();
+        if (href === currentPath) {
+          link.classList.add('active');
+        } else {
+          link.classList.remove('active');
+        }
+      });
+    });
+  </script>
+</body>
 </html>
