--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -11,6 +11,7 @@
   <style>
     .tab__list__item a {
       display: inline-block;
+      
       padding: 10px;
       border-radius: 50%;
       transition: background-color 0.3s ease, border 0.3s ease;
@@ -18,15 +19,15 @@
     }
 
     .tab__list__item a.active {
-      background-color: #007bff;
-      border: 2px solid #0056b3;
+      width: 25px;
+      height: 25px;
     }
   </style>
 </head>
 <body class="tab__body">
   <div class="tab">
     <a href="../index.html"><span class="tab__logo__text">ED</span></a>
-    <a href="../pages/dashboard.html" class="tab__mainicon" style="border: 2px solid #007bff; border-radius: 50%; padding: 4px;">
+    <a href="../pages/dashboard.html" class="tab__mainicon" style="border: 2px solid #007bff; padding: 10px; background-color: #007bff; border-radius: 50%; padding: 4px;">
       <img src="../svg/dashboard.svg" alt="" />
     </a>
     <ul class="tab__list">
