--- a/index.html
+++ b/index.html
@@ -1,92 +1,1 @@
-<!DOCTYPE html>
-<html lang="uk">
-
-<head><script src="/pages/rewiews.05ab3fe1.js"></script><script src="/pages/courses.eda16b4d.js"></script><script src="/pages/settings.1309efa1.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="/index.f7626f62.css">
-    <title>Document</title>
-</head>
-
-<body class="home__body">
-    <header>
-        <div class="container">
-            <span class="header__logo">ED</span>
-           
-            <nav class="nav">
-                <a href="/index.html" class="nav__item">Головна</a>
-                <a href="#footer" class="nav__item">Контакти</a>
-                <a href="/pages/sponsors.html" class="nav__item">Спонсори</a>
-            </nav>
-            <div class="account__choose">
-                <button type="button" class="regButton main__account__btn">Зареєструватися</button>
-                <button type="button" class="logButton main__account__btn">Увійти</button>
-                <div class="profile-header">
-                    <a title="awd" href="/pages/settings.html" id="profile-link" class="profile__circle change__invisible"></a>
-                    <a href="/pages/dashboard.html" id="board-link" class="board__button change__invisible">Дошка</a>
-                    <button id="logout-button" class="logout__button change__invisible">Вийти</button>
-                </div>                
-            </div>
-        </div>
-    </header>
-    <section class="hero">
-        <div class="container">
-            <div class="first__part">
-                <h1 class="first__title">Найкраща онлайн-школа хімії EDTech</h1>
-            </div>
-            <h1 class="second__title">Перший урок безкоштовно!!!</h1>
-            <button class="tryButton try__btn">Спробувати</button>
-        </div>
-    </section>
-    <footer id="footer" class="footer">
-        <div class="container">
-            <div class="footer__box">
-                <span class="footer__logo">EDTech</span>
-                <ul class="footer__list">
-                    <li class="address__item"><a href="" class="address__link">+911</a></li>
-                    <li class="address__item"><a href="" class="address__link">EDTech.chemistry@gmail.com</a></li>
-                    <li class="address__item"><a href="https://maps.app.goo.gl/ZKdGWR2Hb4qPPnKC9" class="address__link">США, Маямі</a></li>
-                    <li class="address__item"><a href="/pages/sponsors.html" class="address__link">Спонсори</a></li>
-                </ul>
-            </div>
-            <div class="work__send">
-                <h3 class="work__title">Для працевлаштування</h3>
-                <button class="work__send__btn">Подати запит</button>
-                <p class="work__description">Ми відповідаємо вам якнайшвидше</p>
-                
-            </div>
-        </div>
-    </footer>
-    <div class="register__modal change__invisible">
-        <form class="register__form">
-            <img class="cross__svg" width="40px" height="40px" src="/cross.2814b245.svg" alt="awd">
-            <h1 class="register__title">Реєстрація</h1>
-            <div class="register__input__box">
-                <input placeholder="Ім'я" name="profilename" class="register__social">
-                <input placeholder="Прізвище" name="profilesurname" class="register__social">
-                <input placeholder="Логін" name="profilelogin" class="register__social">
-                <input placeholder="Пароль" name="profilepassword" class="register__social">
-                <input placeholder="Повторіть пароль" class="register__social">
-            </div>
-            <button type="submit" class="register__more">Зареєструватися</button>
-        </form>
-    </div>
-    <div class="login__modal change__invisible">
-        <form class="login__form">
-            <img class="cross__svg" width="40px" height="40px" src="/cross.2814b245.svg" alt="awd">
-            <h1 class="login__title">Вхід</h1>
-            <div class="login__input__box">
-                <input placeholder="Логін" name="profilelogin" class="login__social">
-                <input placeholder="Пароль" name="profilepassword" class="login__social">
-            </div>
-            <button type="submit" class="login__more">Зайти</button>
-        </form>
-    </div>
-    <script src="/index.975ef6c8.js" defer=""></script>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="uk"><head><script type="module" src="/mge/pages/rewiews.5503519c.js"></script><script type="module" src="/mge/pages/courses.216a1e62.js"></script><script type="module" src="/mge/pages/settings.abe3408b.js"></script><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin referrerpolicy="no-referrer"><link rel="stylesheet" href="/mge/index.adf72e1b.css"><title>Document</title></head><body class="home__body"> <header> <div class="container"> <span class="header__logo">ED</span> <nav class="nav"> <a href="/mge/index.html" class="nav__item">Головна</a> <a href="#footer" class="nav__item">Контакти</a> <a href="/mge/pages/sponsors.html" class="nav__item">Спонсори</a> </nav> <div class="account__choose"> <button type="button" class="main__account__btn regButton">Зареєструватися</button> <button type="button" class="logButton main__account__btn">Увійти</button> <div class="profile-header"> <a title="awd" href="/mge/pages/settings.html" id="profile-link" class="change__invisible profile__circle"></a> <a href="/mge/pages/dashboard.html" id="board-link" class="board__button change__invisible">Дошка</a> <button id="logout-button" class="change__invisible logout__button">Вийти</button> </div> </div> </div> </header> <section class="hero"> <div class="container"> <div class="first__part"> <h1 class="first__title">Найкраща онлайн-школа хімії EDTech</h1> </div> <h1 class="second__title">Перший урок безкоштовно!!!</h1> <button class="try__btn tryButton">Спробувати</button> </div> </section> <footer id="footer" class="footer"> <div class="container"> <div class="footer__box"> <span class="footer__logo">EDTech</span> <ul class="footer__list"> <li class="address__item"><a href class="address__link">+911</a></li> <li class="address__item"><a href class="address__link">EDTech.chemistry@gmail.com</a></li> <li class="address__item"><a href="https://maps.app.goo.gl/ZKdGWR2Hb4qPPnKC9" class="address__link">США, Маямі</a></li> <li class="address__item"><a href="/mge/pages/sponsors.html" class="address__link">Спонсори</a></li> </ul> </div> <div class="work__send"> <h3 class="work__title">Для працевлаштування</h3> <button class="work__send__btn">Подати запит</button> <p class="work__description">Ми відповідаємо вам якнайшвидше</p> </div> </div> </footer> <div class="change__invisible register__modal"> <form class="register__form"> <img class="cross__svg" width="40px" height="40px" src="/mge/cross.fe1d8cb7.svg" alt="awd"> <h1 class="register__title">Реєстрація</h1> <div class="register__input__box"> <input placeholder="Ім'я" name="profilename" class="register__social"> <input placeholder="Прізвище" name="profilesurname" class="register__social"> <input placeholder="Логін" name="profilelogin" class="register__social"> <input placeholder="Пароль" name="profilepassword" class="register__social"> <input placeholder="Повторіть пароль" class="register__social"> </div> <button type="submit" class="register__more">Зареєструватися</button> </form> </div> <div class="change__invisible login__modal"> <form class="login__form"> <img class="cross__svg" width="40px" height="40px" src="/mge/cross.fe1d8cb7.svg" alt="awd"> <h1 class="login__title">Вхід</h1> <div class="login__input__box"> <input placeholder="Логін" name="profilelogin" class="login__social"> <input placeholder="Пароль" name="profilepassword" class="login__social"> </div> <button type="submit" class="login__more">Зайти</button> </form> </div> <script src="/mge/index.9338db42.js" type="module"></script> </body></html>
