--- a/pages/settings.html
+++ b/pages/settings.html
@@ -1,219 +1,1 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/index.f7626f62.css">
-  <title>Налаштування акаунта</title>
-  <style>.profile-settings, .notifications-settings {
-  background-color: #fff;
-  border-radius: 8px;
-  max-width: 600px;
-  padding: 20px;
-  position: relative;
-}
-
-.profile-settings h1, .notifications-settings h1 {
-  color: #002d3a;
-  margin: 0;
-  font-size: 26px;
-}
-
-.profile-settings .profile-name, .notifications-settings .profile-name {
-  color: #555;
-  margin-bottom: 20px;
-  font-size: 20px;
-}
-
-.profile-settings label, .notifications-settings label {
-  color: #333;
-  margin-bottom: 8px;
-  font-weight: bold;
-  display: block;
-}
-
-.profile-settings input, .notifications-settings input {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  width: calc(100% - 16px);
-  margin-bottom: 16px;
-  padding: 12px;
-  font-size: 16px;
-}
-
-.profile-settings button, .notifications-settings button {
-  color: #fff;
-  cursor: pointer;
-  background-color: #002d3a;
-  border: none;
-  border-radius: 4px;
-  padding: 12px 24px;
-  font-size: 18px;
-  transition: background-color .3s;
-}
-
-.profile-settings button:hover, .notifications-settings button:hover {
-  background-color: #0056b3;
-}
-
-.modal {
-  background-color: #0009;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-}
-
-.modal-content {
-  background-color: #fff;
-  border-radius: 8px;
-  width: 90%;
-  max-width: 600px;
-  padding: 30px;
-  overflow-y: auto;
-  box-shadow: 0 4px 8px #0000001a;
-}
-
-.modal-header {
-  justify-content: space-between;
-  align-items: center;
-  display: flex;
-}
-
-.modal-header h2 {
-  color: #002d3a;
-  margin: 0;
-  font-size: 24px;
-}
-
-.modal-header button {
-  color: #007bff;
-  cursor: pointer;
-  background: none;
-  border: none;
-  font-size: 24px;
-}
-
-.modal-header button:hover {
-  color: #0056b3;
-}
-
-.modal-body {
-  margin-top: 20px;
-}
-
-#notificationsButton {
-  color: #fff;
-  cursor: pointer;
-  background-color: #002d3a;
-  border: none;
-  border-radius: 4px;
-  padding: 12px 24px;
-  font-size: 18px;
-  transition: background-color .3s;
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-}
-
-#notificationsButton:hover {
-  background-color: #0056b3;
-}
-
-.notification-item {
-  background-color: #f9f9f9;
-  border-bottom: 1px solid #ddd;
-  justify-content: space-between;
-  align-items: center;
-  padding: 12px;
-  display: flex;
-}
-
-.notification-item p {
-  margin: 0;
-  font-size: 16px;
-}
-
-.notification-item button {
-  color: red;
-  cursor: pointer;
-  background: none;
-  border: none;
-  font-size: 18px;
-}
-
-.notification-item button:hover {
-  color: #8b0000;
-}
-
-.settingsTitle {
-  color: #c82333;
-}
-</style>
-</head>
-<body class="tab__body">
-  <div class="tab">
-    <a href="/index.html"><span class="tab__logo__text">ED</span></a>
-    <a href="/pages/dashboard.html">
-      <img class="tab__mainicon" src="/dashboard.84449c88.svg" alt="">
-    </a>
-    <ul class="tab__list">
-      <li class="tab__list__item">
-        <a href="/pages/courses.html">
-          <img class="tab__list__item__svg" src="/school.21124949.svg" alt="Школа">
-        </a>
-      </li>
-      <li class="tab__list__item">
-        <a href="/pages/lessons.html">
-          <img class="tab__list__item__svg" src="/emoji_objects.076f501b.svg" alt="Емоджі об'єкти">
-        </a>
-      </li>
-      <li class="tab__list__item">
-        <a href="/pages/rewiews.html">
-          <img class="tab__list__item__svg" src="/chat.8d9b58d9.svg" alt="Чат">
-        </a>
-      </li>
-    </ul>
-    <button id="notificationsButton">Уведомлення</button>
-  </div>
-
-  <div class="profile-settings">
-    <h1 class="settingsTitle">Налаштування профілю</h1>
-    <div class="profile-name" id="profileName">Ім'я користувача</div>
-    <form id="settingsForm">
-      <label for="name">Ім'я</label>
-      <input type="text" id="name" name="name" required="">
-
-      <label for="password">Пароль</label>
-      <input type="password" id="password" name="password" required="">
-
-      <button type="submit">Зберегти зміни</button>
-    </form>
-  </div>
-
-  <div id="notificationsModal" class="modal">
-    <div class="modal-content notifications-settings">
-      <div class="modal-header">
-        <h2>Уведомлення</h2>
-        <button id="closeNotificationsModal">&times;</button>
-      </div>
-      <div class="modal-body">
-        <form id="notificationForm">
-          <label for="notificationMessage">Повідомлення</label>
-          <input type="text" id="notificationMessage" name="notificationMessage" required="">
-          <button type="submit">Відправити повідомлення</button>
-        </form>
-        <div id="notificationsList">
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <script src="/pages/settings.1309efa1.js" defer="">
-</script>
-</body>
-</html>
+<!DOCTYPE html><html lang="uk"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="/mge/index.adf72e1b.css"><title>Налаштування акаунта</title><style>.profile-settings,.notifications-settings{background-color:#fff;border-radius:8px;max-width:600px;padding:20px;position:relative}.profile-settings h1,.notifications-settings h1{color:#002d3a;margin:0;font-size:26px}.profile-settings .profile-name,.notifications-settings .profile-name{color:#555;margin-bottom:20px;font-size:20px}.profile-settings label,.notifications-settings label{color:#333;margin-bottom:8px;font-weight:700;display:block}.profile-settings input,.notifications-settings input{border:1px solid #ddd;border-radius:4px;width:calc(100% - 16px);margin-bottom:16px;padding:12px;font-size:16px}.profile-settings button,.notifications-settings button{color:#fff;cursor:pointer;background-color:#002d3a;border:none;border-radius:4px;padding:12px 24px;font-size:18px;transition:background-color .3s}.profile-settings button:hover,.notifications-settings button:hover{background-color:#0056b3}.modal{background-color:#0009;justify-content:center;align-items:center;width:100%;height:100%;display:none;position:fixed;top:0;left:0}.modal-content{background-color:#fff;border-radius:8px;width:90%;max-width:600px;padding:30px;overflow-y:auto;box-shadow:0 4px 8px #0000001a}.modal-header{justify-content:space-between;align-items:center;display:flex}.modal-header h2{color:#002d3a;margin:0;font-size:24px}.modal-header button{color:#007bff;cursor:pointer;background:0 0;border:none;font-size:24px}.modal-header button:hover{color:#0056b3}.modal-body{margin-top:20px}#notificationsButton{color:#fff;cursor:pointer;background-color:#002d3a;border:none;border-radius:4px;padding:12px 24px;font-size:18px;transition:background-color .3s;position:fixed;bottom:20px;right:20px}#notificationsButton:hover{background-color:#0056b3}.notification-item{background-color:#f9f9f9;border-bottom:1px solid #ddd;justify-content:space-between;align-items:center;padding:12px;display:flex}.notification-item p{margin:0;font-size:16px}.notification-item button{color:red;cursor:pointer;background:0 0;border:none;font-size:18px}.notification-item button:hover{color:#8b0000}.settingsTitle{color:#c82333}</style></head><body class="tab__body"> <div class="tab"> <a href="/mge/index.html"><span class="tab__logo__text">ED</span></a> <a href="/mge/pages/dashboard.html"> <img class="tab__mainicon" src="/mge/dashboard.c1601abe.svg" alt> </a> <ul class="tab__list"> <li class="tab__list__item"> <a href="/mge/pages/courses.html"> <img class="tab__list__item__svg" src="/mge/school.185c1a10.svg" alt="Школа"> </a> </li> <li class="tab__list__item"> <a href="/mge/pages/lessons.html"> <img class="tab__list__item__svg" src="/mge/emoji_objects.b46bab92.svg" alt="Емоджі об'єкти"> </a> </li> <li class="tab__list__item"> <a href="/mge/pages/rewiews.html"> <img class="tab__list__item__svg" src="/mge/chat.6da958e5.svg" alt="Чат"> </a> </li> </ul> <button id="notificationsButton">Уведомлення</button> </div> <div class="profile-settings"> <h1 class="settingsTitle">Налаштування профілю</h1> <div class="profile-name" id="profileName">Ім'я користувача</div> <form id="settingsForm"> <label for="name">Ім'я</label> <input type="text" id="name" name="name" required> <label for="password">Пароль</label> <input type="password" id="password" name="password" required> <button type="submit">Зберегти зміни</button> </form> </div> <div id="notificationsModal" class="modal"> <div class="modal-content notifications-settings"> <div class="modal-header"> <h2>Уведомлення</h2> <button id="closeNotificationsModal">&times;</button> </div> <div class="modal-body"> <form id="notificationForm"> <label for="notificationMessage">Повідомлення</label> <input type="text" id="notificationMessage" name="notificationMessage" required> <button type="submit">Відправити повідомлення</button> </form> <div id="notificationsList"> </div> </div> </div> </div> <script src="/mge/pages/settings.abe3408b.js" type="module"></script> </body></html>
