--- a/src/pages/courses.html
+++ b/src/pages/courses.html
@@ -59,7 +59,7 @@
             <h2>Виберіть курс</h2>
             <ul id="courseList">
                 <li class="course-list-item"><a href="../pages/lessons1.html" class="course-link" data-id="1" data-name="Хімія 101">Хімія 101</a></li>
-                <li class="course-list-item"><a href="../pages/lessons.html" class="course-link" data-id="2" data-name="Органічна хімія">Органічна хімія</a></li>
+                <li class="course-list-item"><a href="../pages/lessons2.html" class="course-link" data-id="2" data-name="Органічна хімія">Органічна хімія</a></li>
                 <li class="course-list-item"><a href="../pages/lessons3.html" class="course-link" data-id="3" data-name="Аналітична хімія">Аналітична хімія</a></li>
             </ul>
         </div>
