--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -5,13 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../sass/main.scss">
   <title>Document</title>
   <style>
     .tab__list__item a {
       display: inline-block;
-      
       padding: 10px;
       border-radius: 50%;
       transition: background-color 0.3s ease, border 0.3s ease;
@@ -21,6 +20,91 @@
     .tab__list__item a.active {
       width: 25px;
       height: 25px;
+    }
+
+    .dashboard__title {
+      font-size: 64px;
+      margin-top: 40px;
+    }
+
+    .dashboard__box {
+      margin-top: 100px;
+      display: flex;
+      align-items: center;
+    }
+
+    .dashboard__box__description {
+      width: 438px;
+      margin-left: 31px;
+    }
+
+    .dashboard__benefits {
+      margin-top: 50px;
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    .benefit {
+      background-color: #f5f5f5;
+      padding: 20px;
+      border-radius: 8px;
+      max-width: 300px;
+      flex: 1;
+      text-align: center;
+    }
+
+    .benefit img {
+      max-width: 100%;
+      border-radius: 8px;
+    }
+
+    .benefit__description {
+      margin-top: 10px;
+    }
+
+    .dashboard__footer {
+      position: fixed;
+      width: 100%;
+      bottom: 0;
+      right: 0;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(5px);
+    }
+
+    .modal-content {
+      background-color: #fefefe;
+      margin: 10% auto;
+      padding: 20px;
+      border-radius: 10px;
+      width: 60%;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    }
+
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -58,6 +142,28 @@
       у школах та інститутах навчається понад 20 % населення Землі.
     </p>
   </div>
+
+  <div class="dashboard__benefits">
+    <div class="benefit">
+      <img src="../images/hero-background.jpg" alt="Benefit 1" />
+      <p class="benefit__description">
+        EdTech дозволяє покращити якість навчання за рахунок інноваційних технологій.
+      </p>
+    </div>
+    <div class="benefit">
+      <img src="../images/hero-background.jpg" alt="Benefit 2" />
+      <p class="benefit__description">
+        Впровадження EdTech підвищує доступність освіти для всіх вікових груп.
+      </p>
+    </div>
+    <div class="benefit">
+      <img src="../images/hero-background.jpg" alt="Benefit 3" />
+      <p class="benefit__description">
+        EdTech сприяє розвитку навичок самостійного навчання та критичного мислення.
+      </p>
+    </div>
+  </div>
+
   <script src="../js/dashboard.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
