--- a/src/pages/rewiews.html
+++ b/src/pages/rewiews.html
@@ -20,6 +20,19 @@
             background-color: #007bff;
             border: 2px solid #0056b3;
         }
+
+        .delete-review {
+            background-color: #ff0000;
+            color: #ffffff;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+
+        .delete-review:hover {
+            background-color: #cc0000;
+        }
     </style>
 </head>
 
@@ -46,7 +59,7 @@
                 </a>
             </li>
         </ul>
-        <a href="../pages/settings.html" id="profileCircle" class="profile-circle"></a>
+        <a href="./settings.html" id="profileCircle" class="profile-circle"></a>
     </div>
 
     <section class="reviews">
