--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <span class="header__logo">ED</span>
            
             <nav class="nav">
-                <a href="./index.html" class="nav__item">Головна</a>
+                <a href="./pages/tab.html" class="nav__item">Головна</a>
                 <a href="#footer" class="nav__item">Контакти</a>
                 <a href="./pages/sponsors.html" class="nav__item">Спонсори</a>
             </nav>
@@ -26,7 +26,7 @@
                 <button type="button" class="regButton main__account__btn">Зареєструватися</button>
                 <button type="button" class="logButton main__account__btn">Увійти</button>
                 <div class="profile-header">
-                    <a title="awd" href="./pages/settings.html" id="profile-link" class="profile__circle change__invisible"></a>
+                    <a href="./pages/settings.html" id="profile-link" class="profile__circle change__invisible"></a>
                     <a href="./pages/dashboard.html" id="board-link" class="board__button change__invisible">Дошка</a>
                     <button id="logout-button" class="logout__button change__invisible">Вийти</button>
                 </div>                
